feature: update paimon demo